# xosu

./: .gitignore  CMakeLists.txt  README.md  build.sh
resources/glsl/: approach.frag  approach.geom  approach.vert  circle.frag  circle.geom  circle.vert  fs.glsl  linear_slider.frag  linear_slider.geom  linear_slider.vert  vs.glsl
src/: circle_buffer.h  gl-matrix.h  incbin.h  linear_slider_buffer.h  mat4.c  osu  osu.c  osu.c~RF24cd93a.TMP  vec3.c
src/glsl/: fs.glsl  gs.glsl  vs.glsl
